k8s/cfe-nginx/7-vs-demo.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tryknative-demo
  namespace: apps
spec:
  gateways:
    - knative-shared-gateway.knative-serving.svc.cluster.local
    - knative-serving/knative-ingress-gateway
  hosts:
  - demo.tryknative.com
  http:
    - name: http-route
      match: 
        - uri:
           prefix: "/" # http://demo.apps.tryknative.com/
      rewrite:
        authority: demo.apps.tryknative.com
      route:
      - destination:
          host: demo.apps.svc.cluster.local
          port:
            number: 80
        weight: 100
